--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>cesium-vue-test</title>
+    <title>vue-cesium</title>
     <script type="text/javascript" src="http://api.tianditu.gov.cn/api?v=4.0&tk=76892c38deab957e65556e5824ca53e9"></script>
   </head>
   <body>
